<resources>
    <string name="app_name">Suitmedia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_hint">Enter your name</string>
    <string name="welcome">WELCOME</string>
    <string name="event">EVENT</string>
    <string name="guest">GUEST</string>
    <string name="name">Mohammad Arafat Maku</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="desc_login">Sertakan gambar profil Anda\nuntuk melengkapi profil.</string>
    <string name="selesai">Selesai</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="hashtag">#%s</string>
</resources>